Run on Java 22.